[project]
name = "aind-experiment-vr-foraging-fip"
version = "0.2.0"
description = "A thin wrapper that runs VrForaging + FIP experiments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aind-behavior-vr-foraging[launcher, data]",
    "aind-physiology-fip",
    "aind-clabe",
    "ruff"
]


[tool.uv.sources]
aind-behavior-vr-foraging = { path = "./Aind.Behavior.VrForaging" }
aind-physiology-fip = { path = "./Aind.Physiology.Fip" }